2011-03-24 Javier Lanz <javier.lanz@artica.es>
	
	* include/ajax/reporting.ajax.php: Added truncating for the agent and
	module name into report SLA list.

2011-03-23  Raul Mateos <raulofpandora@gmail.com>

	* operation/search_agents.php: Updated forgotten file

2011-03-23 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_agente.php: fixed the output of ajax request.

2011-03-23  Raul Mateos <raulofpandora@gmail.com>

	* extensions/ssh_console.php, extensions/vnc_view.php,
	extensions/update_manager.php, extensions/users_connected.php,
	extensions/extension_uploader.php, extensions/insert_data.php,
	extensions/module_groups.php, extensions/plugin_registration.php,
	extensions/agent_modules.php, extensions/resource_registration.php,
	extensions/resource_exportation.php, extensions/dbmanager.php,
	extensions/pandora_logs.php, general/*.php, ajax.php, 
	operation/search_*.php, operation/menu.php, operation/extensions.php,
	godmode/menu.php, godmode/extensions.php, godmode/admin_access_logs.php:
	Reverted unwanted license changes.

2011-03-23 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Changed SLA report table layout

2011-03-23 Javier Lanz <javier.lanz@artica.es>

	* pandoradb.sql: Added creation of treport_content_item and updated
	treport_content table
	* pandoradb.postgreSQL.sql: Added creation of treport_content_item and
	updated treport_content table
	* pandoradb.oracle.sql: Added creation of treport_content_item and
	updated treport_content table
	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added creation of
	treport_content_item and updated treport_content table

2011-03-23 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/insert_data.php, extensions/system_info.php,
	extensions/agents_modules.php, extensions/ssh_console.php,
	extensions/resource_registration.php, extensions/resource_exportation.php,
	extensions/plugin_registration.php: re-ordered and re-cleaned some parts or
	lines of source code. 
