@@ -1,3 +1,14 @@
+2011-03-24 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_reporting.php: fixed in the content "general" when the
+	report haven't agents.
+	
+	* include/fgraph.php: fixed when extract the "sql" column in the table
+	"treport_custom_sql".
+	
+	* godmode/reporting/reporting_builder.item_editor.php: fixed the show the
+	SQL query in the contents that have it.
+
 2011-03-24 Javier Lanz <javier.lanz@artica.es>
 	
 	* include/ajax/reporting.ajax.php: Added truncating for the agent and
